# cosmic_GEANT4

./: .gitignore  CMakeLists.txt  Cosmic.mac  GENBOS.mac  GNUmakefile  Gamma.mac  LQ.mac  Proton.mac  README.md  cosmic.cc  cosmic.in  cosmic.out  gui.mac  init_vis.mac  plotHisto.C  plotNtuple.C  run1.mac  run2.mac  vis.mac
GENBOS/genbosG/: CMakeLists_for_PNM.txt  CMakeLists_for_cernlib.txt  README  ev_nuc.F  gamsu2.F  genbos.hh  genbosG  inG.F  makefile  makefile_static  prim_kine.F  tester  tester.c  yn5i.F  yn6.F
GENBOS/genbosG/mcern/: makefile  makefile_static  norranux.F  pilot.h  rnorthux.F
GENBOS/genbosG_ver11_linux_arm/: fermi_d.F  nt_kine.inc  process.inc  tester.c
GENBOS/genbosG_ver11_linux_x64/: channelex.F  eg.F  genbosG  inG.F  makefile
GENBOS/genbosG_ver11_mac_arm/: -  block_data.F  block_data.c  channelex.F  channelex.c  eg.c  ev_nuc.F  ev_nuc.c  fermi_d.F  fermi_d.c  gamsu2.c  genbos.h  genbosG  genbosG.F  inG.F  makefile  prim_kine.F  prim_kine.c  tester  tester.c  yn3.F  yn3.c  yn5i.F  yn5i.c  yn6.c
GENBOS/genbosG_ver11_mac_arm/libgenbos/: 1.txt
GENBOS/genbosG_ver11 _mac_x64/: genbosG  makefile  yn6.F
include/: ActionInitialization.hh  ChamberHit.hh  ChamberSD.hh  Constants.hh  DetectorConstruction.hh  EventAction.hh  EventInfo.hh  Genbos.hh  GenbosClass.hh  HadronCalorimeterHit.hh  HadronCalorimeterSD.hh  HistoManager.hh  PlasticHit.hh  PlasticSD.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  p4vector.hh
src/: ActionInitialization.cc  ChamberHit.cc  ChamberSD.cc  DetectorConstruction.cc  EventAction.cc  EventInfo.cc  GenbosClass.cc  HadronCalorimeterHit.cc  HadronCalorimeterSD.cc  HistoManager.cc  PlasticHit.cc  PlasticSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  p4vector.cc
